fixed background gap bug on search page

--- a/react-app/src/components/Profile/Profile.module.css
+++ b/react-app/src/components/Profile/Profile.module.css
@@ -7,7 +7,9 @@
   padding: 0 1rem;
 }
 
-.header > * {
+.top_header > h1 {
+  margin: 0;
+  padding: 1rem 0;
 }
 
 .header > div {
